--- a/pg-helper/Cargo.toml
+++ b/pg-helper/Cargo.toml
@@ -14,6 +14,9 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-odbc-common = { path = "../odbc-common", version = "0.2.3" }
 serde = { version = "1.0.147", features = ["derive"] }
+odbc-common = { path = "../odbc-common", version = "0.2.3" }
 postgres-types = "0.2.4"
+
+[dev-dependencies]
+serde_json = "1.0.87"
